--- a/public/app.css
+++ b/public/app.css
@@ -82,7 +82,7 @@ body {
     transition: background 500ms;
 }
 
-@media (min-width: 500px) {
+@media (min-width: 100px) {
     #headingGroup h1 {
         font-weight: 100;
         font-size: 1.0rem;
@@ -97,11 +97,49 @@ body {
     }
 
     .blurb h2 {
-        font-size: 0.75rem;
+        font-size: 1.5rem;
     }
 }
 
-@media (min-width: 600px) {
+/* @media (min-width: 300px) {
+    #headingGroup h1 {
+        font-weight: 100;
+        font-size: 1.0rem;
+    }
+    
+    #headingGroup h2 {
+        font-size: 0.75rem;
+    }
+
+    #headingGroup p {
+        font-size: 0.75rem;
+    }
+
+    .blurb h2 {
+        font-size: 1.5rem;
+    }
+} */
+
+/* @media (min-width: 500px) {
+    #headingGroup h1 {
+        font-weight: 100;
+        font-size: 1.0rem;
+    }
+    
+    #headingGroup h2 {
+        font-size: 0.75rem;
+    }
+
+    #headingGroup p {
+        font-size: 0.75rem;
+    }
+
+    .blurb h2 {
+        font-size: 1.5rem;
+    }
+} */
+
+@media (min-width: 500px) {
     #headingGroup h1 {
         font-weight: 100;
         font-size: 1.5rem;
@@ -116,7 +154,7 @@ body {
     }
 
     .blurb h2 {
-        font-size: 1rem;
+        font-size: 1.5rem;
     }
 }
 
